remove optimizelegibility from h1 chrome buggy

--- a/app/assets/stylesheets/desktop/discourse.scss
+++ b/app/assets/stylesheets/desktop/discourse.scss
@@ -135,7 +135,6 @@ body {
 
   h1, h2, h3, h4, h5, h6 {
     margin: 0;
-    text-rendering: optimizelegibility;
   }
 
   /* page not found styles */
